# CodeSleuth

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
codesleuth/: api.py  cli.py  config.py
codesleuth/indexing/: parser.py  semantic_index.py
codesleuth/search/: __init__.py  lexical_search.py  semantic_search.py
tests/: test_api.py  test_api_integration.py  test_integration.py  test_lexical_search.py  test_parser.py  test_semantic_index.py  test_semantic_search.py
tests/fixtures/sample_repo/: README.md  requirements.txt
tests/fixtures/sample_repo/frontend/: package.json
tests/fixtures/sample_repo/frontend/src/: App.tsx  types.ts
tests/fixtures/sample_repo/src/: main.py
tests/fixtures/sample_repo/src/api/: routes.py
tests/fixtures/sample_repo/src/models/: user.py
tests/fixtures/sample_repo/src/services/: UserManager.php  auth.py  calculator.cpp  multi_lang_test.ts  user_service.rs
workflows/: publish.yml  test.yml
