[project]
name = "codesleuth"
version = "0.1.0"
description = "A local-only code search and retrieval tool that creates semantic embeddings for code snippets"
authors = [
    {name = "Jack Nam",email = "naminalstack+codesleuth@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "transformers (>=4.50.2,<5.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "tree-sitter (>=0.24.0,<0.25.0)",
    "pydantic (>=2.11.0,<3.0.0)",
    "typer (>=0.15.2,<0.16.0)",
    "tree-sitter-language-pack (>=0.6.1,<0.7.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.1"

